Fix code block overflow, add changelog

--- a/assets/scss/components/_prose.scss
+++ b/assets/scss/components/_prose.scss
@@ -81,6 +81,7 @@
     code pre {
         padding: 0.125rem 0.5rem;
         margin: 1rem -0.5rem;
+        overflow: auto;
     }
 
     table {
